Don't keep a static copy of a font's ellipsis character.

If the font changes we won't pick up the new ellipsis character.

BUG=663855

Review-Url: https://codereview.chromium.org/2686693002
Cr-Commit-Position: refs/heads/master@{#449383}

Former-commit-id: e892c6f828b8b5da963f5c184cbda5d7841dfc5b